test/fail/runtime/infinite_eq.lly
#[
RuntimeError: Infinite loop in comparison.
Traceback:
    from infinite_eq.lly:9: in __main__
]#

var lso: list[any] = [1, 2, 3]
lso[0] = lso
if lso == lso:
	print("This will never happen.\n")
